# ase

./: .gitlab-ci.yml  README.rst  appveyor.yml  pyproject.toml
ase/: __init__.py  atoms.py  cell.py  constraints.py  dependencies.py  eos.py  filters.py  neighborlist.py  parallel.py  phasediagram.py  phonons.py  pourbaix.py  surface_pourbaix.py  thermochemistry.py  units.py
ase/calculators/: abinit.py  aims.py  amber.py  calculator.py  castep.py  checkpoint.py  cp2k.py  crystal.py  dftb.py  dftd3.py  eam.py  emt.py  espresso.py  fd.py  genericfileio.py  gromacs.py  harmonic.py  lammpslib.py  lammpsrun.py  mixing.py  mopac.py  morse.py  nwchem.py  octopus.py  onetep.py  orca.py  psi4.py  qmmm.py  singlepoint.py  socketio.py  subprocesscalculator.py  test.py
ase/cli/: build.py  complete.py  diff.py  info.py  main.py  run.py
ase/cluster/: wulff.py
ase/db/: core.py  jsondb.py  postgresql.py  row.py  sqlite.py
ase/dft/: __init__.py  band_structure.py  bandgap.py  bee.py  bz.py  dos.py  kpoints.py  wannier.py
ase/ga/: cutandsplicepairing.py  ofp_comparator.py  relax_attaches.py  slab_operators.py  standardmutations.py  startgenerator.py
ase/geometry/: __init__.py  geometry.py
ase/gui/: add.py  gui.py  images.py  render.py  save.py  status.py  ui.py  view.py
ase/io/: abinit.py  aff.py  aims.py  amber.py  bundlemanipulate.py  bundletrajectory.py  cp2k.py  dlp4.py  espresso.py  exciting.py  extxyz.py  formats.py  gaussian.py  gen.py  gpaw_out.py  gpw.py  gromos.py  lammpsdata.py  lammpsrun.py  magres.py  opls.py  orca.py  pov.py  py.py  siesta_input.py  sys.py  trajectory.py  vasp.py  vtkxml.py  xsd.py  zmatrix.py
ase/lattice/: __init__.py  tetragonal.py
ase/md/: __init__.py  andersen.py  bussi.py  md.py  nose_hoover_chain.py  npt.py  nptberendsen.py  switch_langevin.py  velocitydistribution.py  verlet.py
ase/mep/: __init__.py  autoneb.py  dimer.py  neb.py
ase/optimize/: basin.py  bfgs.py  bfgslinesearch.py  cellawarebfgs.py  climbfixinternals.py  fire.py  fire2.py  lbfgs.py  mdmin.py  ode.py  oldqn.py  optimize.py  sciopt.py
ase/spacegroup/: __init__.py  spacegroup.py  symmetrize.py  utils.py
ase/spectrum/: band_structure.py  doscollection.py  dosdata.py
ase/test/: conftest.py  factories.py  qmmm.py  test_doctests.py  test_imports.py  test_nwchem_writer.py  test_phasediagram.py  test_phonons.py  test_pourbaix.py  test_pubchem.py  test_singlepoint_dft_calc.py  test_stress.py  test_structure_comparator.py  test_versionnumber.py
ase/transport/: calculators.py  stm.py
ase/utils/: __init__.py  newrelease.py  plotting.py
ase/vibrations/: albrecht.py  data.py
changelog.d/: 20250107_115651_asklarsen_scriv_releasenotes.rst  20250108_010554_asklarsen_scriv_changelog.rst  20250108_142933_asklarsen_ase_db_backends.rst
doc/: changelog.rst  conf.py  ecosystem.rst  faq.rst  index.rst  install.rst  logo.py  releasenotes.rst  releasenotes_detailed.rst
doc/ase/: ase.rst  atoms.rst  filters.rst  md.rst  neb.rst  neighborlist.rst  optimize.rst  phonons_Al_fcc.py  (+1 more)
(+163 files in other folders)
